--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.79.0"
 fastapi-utils = "^0.2.1"
 uvicorn = "^0.18.2"
 pydantic = "^1.9.2"
+pre-commit = "^2.20.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
@@ -28,5 +29,3 @@ include = '\.pyi?$'
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-
