--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,6 +18,8 @@ jobs:
         run: npm install -g fern-api
       - name: fern generate
         run: fern generate
+        env:
+          FERN_TOKEN: dummy
       - name: Install dependencies
         run: poetry install
       - name: mypy
