--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.3",
+    "typescript": "4.6.4",
     "vite": "^4.0.0"
   },
   "packageManager": "yarn@3.3.1"
