--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,4 +13,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.8
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - uses: pre-commit/action@v3.0.0
