--- a/.github/workflows/fern-check.yml
+++ b/.github/workflows/fern-check.yml
@@ -19,3 +19,5 @@ jobs:
         run: |
           fern generate
           git --no-pager diff --exit-code
+        env:
+          FERN_TOKEN: dummy
