--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,29 +15,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: actions/setup-python@v3
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+      - name: Install poetry
+        uses: snok/install-poetry@v1.0.0
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
         run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - name: mypy
         run: poetry run mypy
+      
   
-  dockerize:
-    runs-on: ubuntu-latest
-    if: ${{ env.GITHUB_REF == 'refs/heads/main' }}
-    defaults:
-      run:
-        working-directory: ./backend
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-      - name: Install dependencies
-        run: poetry install
-      - name: Install dependencies
-        run: poetry install
-      - name: Docker build
-        run: | 
-          docker build -f Dockerfile -t "server" .
+  # dockerize:
+  #   runs-on: ubuntu-latest
+  #   if: ${{ env.GITHUB_REF == 'refs/heads/main' }}
+  #   defaults:
+  #     run:
+  #       working-directory: ./backend
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v3
+  #     - name: Install Poetry
+  #       uses: snok/install-poetry@v1
+  #     - name: Install dependencies
+  #       run: poetry install
+  #     - name: Install dependencies
+  #       run: poetry install
+  #     - name: Docker build
+  #       run: | 
+  #         docker build -f Dockerfile -t "server" .
