--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: actions/setup-python@v3
-      - name: Install poetry
-        uses: snok/install-poetry@v1.0.0
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.3
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
