--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,12 +17,6 @@ jobs:
 
       - uses: actions/setup-python@v3
 
-      - name: Install Poetry Action
-        uses: snok/install-poetry@v1.3.3
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
       - name: Load cached Poetry installation
         id: cached-poetry
         uses: actions/cache@v3
@@ -44,9 +38,11 @@ jobs:
       - name: Install dependencies
         run: poetry install
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        
+
       - name: mypy
-        run: poetry run mypy
+        run: | 
+          source .venv/bin/activate
+          mypy
       
   
   # dockerize:
