--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,3 +21,24 @@ jobs:
         run: poetry install
       - name: mypy
         run: poetry run mypy
+
+  dockerize:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: actions/setup-python@v3
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - name: Install dependencies
+        run: poetry install
+      - name: Install dependencies
+        run: poetry install
+      - name: Docker build
+        run: | 
+          docker build -f Dockerfile -t "server" .
