--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,7 +25,7 @@ jobs:
   dockerize:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     defaults:
       run:
         working-directory: ./backend
