Output esm, not cjs

--- a/fern/api/generators.yml
+++ b/fern/api/generators.yml
@@ -12,3 +12,5 @@ groups:
         output:
           location: local-file-system
           path: ../../frontend/src/api/generated
+        config:
+          outputEsm: true
